# cmdcalc

./: .gitignore  CMakeLists.txt  README.md
include/: calculator.h  tokenizer.h
src/: calculator.cpp  main.cpp  tokenizer.cpp
tests/: test_calculator.cpp
